[gd_scene load_steps=22 format=3 uid="uid://bisctldckwds"]

[ext_resource type="Script" path="res://nodes/ui/options/options.gd" id="1_hhvu4"]
[ext_resource type="PackedScene" uid="uid://bke750yp0plhd" path="res://nodes/ui/options/sound/sound_options.tscn" id="2_aiylp"]
[ext_resource type="Shader" path="res://nodes/ui/options/shaders/blur/blur.gdshader" id="3_dcjql"]
[ext_resource type="Theme" uid="uid://ea3c2pcwief3" path="res://materials/ui/default_theme.tres" id="4_13mb3"]
[ext_resource type="PackedScene" uid="uid://di8ujnlodowpp" path="res://nodes/ui/options/buttons/option_button.tscn" id="5_c87vx"]
[ext_resource type="Texture2D" uid="uid://c3am6jd2ryfv8" path="res://sprites/ui/levels.svg" id="6_1uh7c"]
[ext_resource type="StyleBox" uid="uid://cfhx1hummvka1" path="res://materials/ui/button_default.tres" id="6_fclgq"]
[ext_resource type="Texture2D" uid="uid://panod70sxt6d" path="res://sprites/ui/controls.svg" id="7_8gsvy"]
[ext_resource type="StyleBox" uid="uid://cj7yyf8s2vc5" path="res://materials/ui/button_focus.tres" id="7_lf2w3"]
[ext_resource type="Texture2D" uid="uid://dk3rvqk1vgycs" path="res://sprites/ui/graphics.svg" id="8_apufe"]
[ext_resource type="Texture2D" uid="uid://c4h43uifrswdi" path="res://sprites/ui/option_exit.png" id="8_bv6xm"]
[ext_resource type="PackedScene" uid="uid://dvsl2ffa1ubi2" path="res://nodes/ui/options/controls/controls_options.tscn" id="9_d6m48"]
[ext_resource type="Texture2D" uid="uid://bv6f5mhmjtq21" path="res://sprites/ui/sound.svg" id="9_pi44s"]
[ext_resource type="PackedScene" uid="uid://dxywrktfu03o7" path="res://nodes/ui/options/graphics/graphic_options.tscn" id="10_2ui8u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fb3om"]
shader = ExtResource("3_dcjql")
shader_parameter/blur = 2.836

[sub_resource type="Gradient" id="Gradient_qhchc"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.709804, 0.823529, 0.772549, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yxkdc"]
gradient = SubResource("Gradient_qhchc")

[sub_resource type="Gradient" id="Gradient_42c6x"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.698039, 0.815686, 0.764706, 0.67451)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dd11f"]
gradient = SubResource("Gradient_42c6x")

[sub_resource type="Theme" id="Theme_uykf2"]
default_font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76k4q"]
bg_color = Color(0.6, 0.6, 0.6, 0)
expand_margin_left = 8.0
expand_margin_right = 8.0
anti_aliasing = false

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_hhvu4")

[node name="SoundOptions" parent="." instance=ExtResource("2_aiylp")]
visible = false
offset_top = 0.0
offset_bottom = 0.0

[node name="MainOptions" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="MainOptions"]
material = SubResource("ShaderMaterial_fb3om")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture1D_yxkdc")

[node name="TextureRect2" type="TextureRect" parent="MainOptions"]
layout_mode = 0
offset_left = 2.0
offset_right = 1282.0
offset_bottom = 720.0
texture = SubResource("GradientTexture1D_dd11f")

[node name="StepsLevelText" type="RichTextLabel" parent="MainOptions"]
layout_mode = 0
offset_top = 160.0
offset_right = 1280.0
offset_bottom = 224.0
theme = ExtResource("4_13mb3")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Game menu"
scroll_active = false

[node name="ButtonBar" type="Control" parent="MainOptions"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.311
anchor_right = 0.8
anchor_bottom = 0.911
offset_left = 152.0
offset_top = 211.56
offset_right = 328.0
offset_bottom = 187.56
rotation = -0.00127324

[node name="Levels" parent="MainOptions/ButtonBar" instance=ExtResource("5_c87vx")]
layout_mode = 0
offset_left = -32.0
offset_top = 32.0
offset_right = 189.0
offset_bottom = 240.0
focus_neighbor_left = NodePath("../Sound")
focus_previous = NodePath("../Sound")
label = "LEVELS"
texture = ExtResource("6_1uh7c")

[node name="Controls" parent="MainOptions/ButtonBar" instance=ExtResource("5_c87vx")]
layout_mode = 0
offset_left = 224.0
offset_top = 32.0
offset_right = 445.0
offset_bottom = 240.0
label = "controls"
texture = ExtResource("7_8gsvy")

[node name="Graphics" parent="MainOptions/ButtonBar" instance=ExtResource("5_c87vx")]
layout_mode = 0
offset_left = 480.0
offset_top = 32.0
offset_right = 701.0
offset_bottom = 240.0
label = "graphics"
texture = ExtResource("8_apufe")

[node name="Sound" parent="MainOptions/ButtonBar" instance=ExtResource("5_c87vx")]
layout_mode = 0
offset_left = 736.0
offset_top = 32.0
offset_right = 957.0
offset_bottom = 240.0
focus_neighbor_right = NodePath("../Levels")
focus_next = NodePath("../Levels")
label = "Sound"
texture = ExtResource("9_pi44s")

[node name="ExitButton" type="Button" parent="MainOptions"]
layout_mode = 0
offset_left = 600.0
offset_top = 561.0
offset_right = 643.0
offset_bottom = 609.0
theme = SubResource("Theme_uykf2")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = -2
theme_override_constants/icon_max_width = 24
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("6_fclgq")
theme_override_styles/hover = ExtResource("7_lf2w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_76k4q")
theme_override_styles/focus = ExtResource("7_lf2w3")
alignment = 0
icon_alignment = 2
expand_icon = true
metadata/_edit_group_ = true

[node name="OptionExit" type="Sprite2D" parent="MainOptions/ExitButton"]
position = Vector2(22, 24)
scale = Vector2(0.961111, 0.961111)
texture = ExtResource("8_bv6xm")

[node name="ControlsOptions" parent="." instance=ExtResource("9_d6m48")]
visible = false

[node name="GraphicOptions" parent="." instance=ExtResource("10_2ui8u")]
visible = false
